; ModuleID = '/home/carl/AnghaBench/linux/drivers/pnp/isapnp/extr_core.c_isapnp_key.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pnp/isapnp/extr_core.c_isapnp_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @isapnp_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isapnp_key() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i8 106, i8* %1, align 1
  %4 = call i32 @mdelay(i32 1)
  %5 = call i32 @write_address(i8 zeroext 0)
  %6 = call i32 @write_address(i8 zeroext 0)
  %7 = load i8, i8* %1, align 1
  %8 = call i32 @write_address(i8 zeroext %7)
  store i32 1, i32* %3, align 4
  br label %9

9:                                                ; preds = %32, %0
  %10 = load i32, i32* %3, align 4
  %11 = icmp slt i32 %10, 32
  br i1 %11, label %12, label %35

12:                                               ; preds = %9
  %13 = load i8, i8* %1, align 1
  %14 = zext i8 %13 to i32
  %15 = and i32 %14, 1
  %16 = load i8, i8* %1, align 1
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 2
  %19 = ashr i32 %18, 1
  %20 = xor i32 %15, %19
  %21 = shl i32 %20, 7
  %22 = trunc i32 %21 to i8
  store i8 %22, i8* %2, align 1
  %23 = load i8, i8* %1, align 1
  %24 = zext i8 %23 to i32
  %25 = ashr i32 %24, 1
  %26 = load i8, i8* %2, align 1
  %27 = zext i8 %26 to i32
  %28 = or i32 %25, %27
  %29 = trunc i32 %28 to i8
  store i8 %29, i8* %1, align 1
  %30 = load i8, i8* %1, align 1
  %31 = call i32 @write_address(i8 zeroext %30)
  br label %32

32:                                               ; preds = %12
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %9

35:                                               ; preds = %9
  ret void
}

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @write_address(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
